kerning fix, spacing from dropcap too much

--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -139,6 +139,6 @@
     color: var(--primary);
     font-size: 3.0em;
     float: left;
-    margin-right: 0.2em;
+    margin-right: 0.05em;
     line-height: 1.0em;
   }
